--- a/compose-files/openvpn-transmission/compose.yaml
+++ b/compose-files/openvpn-transmission/compose.yaml
@@ -27,6 +27,10 @@ services:
       - 9091:9091 # Transmission Web UI
       - 8191:8191 # Flaresolverr
       - 9696:9696 # Prowlarr
+      - 8989:8989 # Sonarr
+      - 7878:7878 # Radarr
+      - 6767:6767 # Bazarr
+      - 8787:8787 # Readarr
     restart: unless-stopped
     networks:
       - homelab
