--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
       HOMEPAGE_VAR_NPM_USERNAME: $NPM_USERNAME
       HOMEPAGE_VAR_NPM_PASSWORD: $NPM_PASSWORD
       HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: $AUDIOBOOKSHELF_API_KEY
+      HOMEPAGE_VAR_URL: $URL
     ports:
       - 8001:3000
     volumes:
