--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       HOMEPAGE_VAR_NPM_PASSWORD: $NPM_PASSWORD
       HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: $AUDIOBOOKSHELF_API_KEY
       HOMEPAGE_VAR_URL: $URL
+      HOMEPAGE_VAR_HOST_IP: $HOST_IP
     ports:
       - 8001:3000
     volumes:
