--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ include:
   - compose-files/tools/compose.yaml
   - compose-files/nginx-proxy-manager/compose.yaml
   - compose-files/tailscale/compose.yaml
+  # - compose-files/hoarder/compose.yaml
   # - compose-files/authentik/compose.yaml
   # - compose-files/gitlab/compose.yaml
 
