--- a/compose-files/management/compose.yaml
+++ b/compose-files/management/compose.yaml
@@ -12,7 +12,37 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - homelab
-  
+
+  beszel:
+    image: henrygd/beszel:latest
+    container_name: beszel
+    restart: unless-stopped
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    environment:
+      DISABLE_PASSWORD_AUTH: true
+    ports:
+      - 8090:8090
+    volumes:
+      - "${BASE_PATH}/config/beszel_data:/beszel_data"
+    networks:
+      - homelab
+
+  beszel-agent:
+    image: henrygd/beszel-agent:latest
+    container_name: beszel-agent
+    restart: unless-stopped
+    # network_mode: host
+    # volumes:
+    #   - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      DOCKER_HOST: dockerproxy
+      PORT: 45876
+      # Do not remove quotes around the key
+      KEY: 'UPDATE WITH YOUR PUBLIC KEY (copy from "Add system" dialog)' 
+    networks:
+      - homelab
+
   autoheal:
     container_name: autoheal
     image: willfarrell/autoheal
