--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BASE_PATH=<path to docker compose file>
+BASE_PATH=<path to server config folder on external>
 URL=<custom domain>
 HOST_IP=<local ip address>
 
