--- a/homepage/config/services.yaml
+++ b/homepage/config/services.yaml
@@ -123,7 +123,7 @@
           type: pihole
           url: http://192.168.1.146
           version: 6
-          key: {{HOMEPAGE_PIHOLE_PASSWORD}}
+          # key: {{HOMEPAGE_PIHOLE_PASSWORD}}
     - Stirling PDF:
         icon: stirling-pdf.png
         description: "PDF Tools"
