--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
       HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: $AUDIOBOOKSHELF_API_KEY
       HOMEPAGE_VAR_URL: $URL
       HOMEPAGE_VAR_HOST_IP: $HOST_IP
-      HOMEPAGE_PIHOLE_PASSWORD: $PIHOLE_WEBPASSWORD
+      # HOMEPAGE_PIHOLE_PASSWORD: $PIHOLE_WEBPASSWORD
     ports:
       - 8001:3000
     volumes:
