--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
     environment:
       PUID: 1000
       PGID: 1000
+      HOMEPAGE_ALLOWED_HOSTS: $HOMEPAGE_ALLOWED_HOSTS
       HOMEPAGE_VAR_SONARR_API_KEY: $SONARR_API_KEY
       HOMEPAGE_VAR_RADARR_API_KEY: $RADARR_API_KEY
       HOMEPAGE_VAR_JELLYFIN_API_KEY: $JELLYFIN_API_KEY
