--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,7 +34,8 @@ services:
       HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: $AUDIOBOOKSHELF_API_KEY
       HOMEPAGE_VAR_URL: $URL
       HOMEPAGE_VAR_HOST_IP: $HOST_IP
-      HOMEPAGE_PIHOLE_PASSWORD: $PIHOLE_WEBPASSWORD
+      HOMEPAGE_VAR_PIHOLE_PASSWORD: $PIHOLE_WEBPASSWORD
+      HOMEPAGE_VAR_MEALIE_API_KEY: $MEALIE_API_KEY
     ports:
       - 8001:3000
     volumes:
