add home assistant

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,6 @@ include:
   # - compose-files/gitlab/compose.yaml
 
 services:
-
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
@@ -38,6 +37,7 @@ services:
       HOMEPAGE_VAR_PIHOLE_PASSWORD: $PIHOLE_WEBPASSWORD
       HOMEPAGE_VAR_BESZEL_USERNAME: $BESZEL_USERNAME
       HOMEPAGE_VAR_BESZEL_PASSWORD: $BESZEL_PASSWORD
+      HOMEPAGE_VAR_HOME_ASSISTANT_TOKEN: $HOME_ASSISTANT_TOKEN
       LOG_LEVEL: debug
     ports:
       - 8001:3000
@@ -65,7 +65,6 @@ services:
     restart: unless-stopped
     networks:
       - homelab
-
 
 networks:
   homelab:
