--- a/homepage/config/services.yaml
+++ b/homepage/config/services.yaml
@@ -125,6 +125,20 @@
           key: {{HOMEPAGE_VAR_PROWLARR_API_KEY}}
 
 - Tools:
+    - Home Assistant:
+        icon: home-assistant.png
+        description: Home Assistant
+        href: http://192.168.0.92:8123
+        widget:
+          type: homeassistant
+          url: http://192.168.0.92:8123
+          key: {{HOMEPAGE_VAR_HOME_ASSISTANT_TOKEN}}
+          custom:
+            - template: "{{ states.switch|selectattr('state','equalto','on')|list|length }}"
+              label: switches on
+            - state: weather.forecast_home
+              label: wind speed
+              value: "{attributes.wind_speed} {attributes.wind_speed_unit}"
     - Stirling PDF:
         icon: stirling-pdf.png
         description: "PDF Tools"
